changed the contact at the bottom to be a button clas

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                 <h2>Get in Touch</h2>
                 <p>If you like my work, I encourage you to reach out to me to discuss future oppurtunities! Please contact me. Call: +61 410038082. Prefer sending an email?</p>
                 <div>
-                    <a href="mailto:danramsay96@gmail.com">Email Me</a>
+                    <a href="mailto:danramsay96@gmail.com" class="button contact">Email Me</a>
                 </div>
                 <nav>
                     <ul>
