--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div>
                         <div>
                             <picture>
-                                <source srcset="img/plutopay/project1.png" media="(max-width:767px)">
+                                <source srcset="img/plutopay/project1-mobile.png" media="(max-width:767px)">
                                 <img src="img/plutopay/project1.png" alt="Project 1">
                             </picture>
                         </div>
