got rid of closing br tag

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <main id="hero">
             <div>
                 <div>
-                    <h1>Hi there, My name’s Dan Ramsay.<br><span>I’m a budding UX designer based in Melbourne, Australia.</span></br></h1>
+                    <h1>Hi there, My name’s Dan Ramsay.<br><span>I’m a budding UX designer based in Melbourne, Australia.</span></h1>
                     <p>I graduated from Monash University with a Bachelor of Arts Majoring in Journalism, and recently transitioned to UX design which has become my passion. 
                         I look forward  sharing my work with you, I hope it reflects the hard work and energy I’ve put into it.</p>
                 </div>
