--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
     </head>
 
     <body>
+
         <header id="header">
             <div>
-                <picture>
-                    <source srcset="img/logo.png" media="(max-width:767px)">
-                    <img src="img/logo.png" alt="Logo">
-                </picture>
+                <img src="img/logo.png" alt="Logo" id="logo">
                 <nav>
-                    <a href="index.html">Work</a>
-                    <a href="about.html">About</a>
-                    <a href="#contact">Contact</a>
+                    <ul>
+                       <li><a href="pluto-pay.html">Work</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
                 </nav>
             </div>
         </header>
         
-        <main id="hero">
-            <div>
-                <div>
+        <main>
+            <div class="container">
+                <div id="hero">
                     <h1>Hi there, My name’s Dan Ramsay.<br><span>I’m a budding UX designer based in Melbourne, Australia.</span></h1>
                     <p>I graduated from Monash University with a Bachelor of Arts Majoring in Journalism, and recently transitioned to UX design which has become my passion. 
                         I look forward  sharing my work with you, I hope it reflects the hard work and energy I’ve put into it.</p>
                 </div>
             </div>
-            <div id="my-work">
-                <div>
+            <div id="work">
+                <div class="container">
                     <h2>My Work</h2>
-                    <div>
+                    <div class="row">
                         <div>
                             <picture>
                                 <source srcset="img/plutopay/project1-mobile.png" media="(max-width:767px)">
@@ -56,8 +56,8 @@
             </div>
         </main>
         
-        <footer id="contact">
-            <div>
+        <footer id="footer">
+            <div class="container">
                 <h2>Get in Touch</h2>
                 <p>If you like my work, I encourage you to reach out to me to discuss future oppurtunities! Please contact me. Call: +61 410038082. Prefer sending an email?</p>
                 <div>
