--- a/pluto-pay.html
+++ b/pluto-pay.html
@@ -11,13 +11,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     </head>
 
-    <header>
-        <div id="header">
-            <img src="img/logo.png" alt="Logo">
+    <header id="header">
+        <div class="container">
+            <img src="img/logo.png" alt="Logo" id="logo">
             <nav>
-                <a href="index.html">Work</a>
-                <a href="about.html">About</a>
-                <a href="#contact">Contact</a>
+                <ul>
+                   <li><a href="pluto-pay.html">Work</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
             </nav>
         </div>
     </header>
