--- a/pluto-pay.html
+++ b/pluto-pay.html
@@ -27,9 +27,9 @@
     <body>
         <main>
             <div><!--Whole Page Container-->
-                <div id="pluto-pay"><!--Main content container-->
+                <div class="container" id="pluto-pay"><!--Main content container-->
                     <h1>Pluto-Pay</h1>
-                    <div><!--Header container-->
+                    <div id="pluto-header"><!--Header container-->
                         <picture>
                             <source srcset="img/plutopay/project1-mobile.png" media="(max-width:767px)">
                             <img src="img/plutopay/project1.png" alt="Project 1">
@@ -37,15 +37,15 @@
                         <p>As mentioned Pluto-Pay was a project I completed for Careerfoundry during August-October 2022. It served as my first UX project, so it was as much a 
                             learning journey as it was a design one.</p>
                     </div>
-                    <div><!--Process container-->
+                    <div id="my-process"><!--Process container-->
                         <h2>My Process</h2>
-                        <div><!--Research container-->
+                        <div id="step-card"><!--Research container-->
                             <h3>Research</h3>
                             <p>Research for Pluto-Pay involved competitive analysis of apps such as Paypal, as well as user interviews. From that research, I crafted the hypothesis
                                  that there are so many different types of finance apps currently available, that having functionality of multiple apps in one package would offer 
                                  users enough of a convenience</p>
                         </div>
-                        <div><!--Ideation container-->
+                        <div id="step-card"><!--Ideation container-->
                             <picture>
                                 <source srcset="img/plutopay/userflows-mobile.png" media="(max-width:767px)">
                                 <img src="img/plutopay/userflows.png" alt="User Flows">
@@ -56,7 +56,7 @@
                                  and secure to complete. The user flows I created reflect this as well, highlighting the importance of having both an easy way to add and transfer to
                                 new contacts, and robust financial tracking capabilities.</p>
                         </div>
-                        <div><!--Wireframes container-->
+                        <div id="step-card"><!--Wireframes container-->
                             <picture>
                                 <source srcset="img/plutopay/wireframes-mobile.png" media="(max-width:767px)">
                                 <img src="img/plutopay/wireframes.png" alt="Wireframes">
@@ -66,7 +66,7 @@
                                 looking once I had a better grasp of design principles. While the overall skeleton of the website remains the same, much of the layout and design
                                 would change over subsequent iterations.</p>
                         </div>
-                        <div><!--Prototypes container-->
+                        <div id="step-card"><!--Prototypes container-->
                             <picture>
                                 <source srcset="img/plutopay/iterations-mobile.png" media="(max-width:767px)">
                                 <img src="img/plutopay/iterations.png" alt="Iterations">
@@ -77,7 +77,7 @@
                                 over-designed and cluttered, mostly due to the fact that I wasn’t confident in my design skills at the time. However, you can see the
                                 drastic improvements made to the final prototype; thanks largely to extensive feedback and honed design skills.</p>
                         </div>
-                        <div><!--Conclusion container-->
+                        <div id="step-card"><!--Conclusion container-->
                             <picture>
                                 <source srcset="img/plutopay/final-mockups-mobile.png" media="(max-width:767px)">
                                 <img src="img/plutopay/final-mockups.png" alt="Final Mockups">
@@ -93,12 +93,12 @@
             </div>
         </main>
 
-        <footer id="contact">
-            <div>
+        <footer>
+            <div class="container" id="footer">
                 <h2>Get in Touch</h2>
                 <p>If you like my work, I encourage you to reach out to me to discuss future oppurtunities! Please contact me. Call: +61 410038082. Prefer sending an email?</p>
                 <div>
-                    <a href="mailto:danramsay96@gmail.com" class="button contact">Email Me</a>
+                    <a href="mailto:danramsay96@gmail.com" class="button-contact">Email Me</a>
                 </div>
                 <nav>
                     <ul>
@@ -132,6 +132,6 @@
                 <p>Copyright Dan Ramsay 2022</p>
             </div>
         </footer>
-        
+
     </body>
 </html>
