--- a/about.html
+++ b/about.html
@@ -11,20 +11,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     </head>
 
-    <header id="header">
-        <div class="container">
-            <img src="img/logo.png" alt="Logo" id="logo">
-            <nav>
-                <ul>
-                   <li><a href="pluto-pay.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
     <body>
+
+        <header>
+            <div class="container">
+                <a href="index.html"><img src="img/logo.png" alt="Logo" id="logo"></a>
+                <nav>
+                    <ul>
+                       <li><a href="pluto-pay.html">Work</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
         <main>
             <div> <!-- 2x whole section block -->
                 <div>
@@ -56,6 +57,9 @@
                                             <li>Persona Creation</li>
                                             <li>User journeys</li>
                                             <li>Wireframes</li>
+                                            <li>Prototype creation/design</li>
+                                            <li>Basic HTML, CSS, and javascript knowledge</li>
+                                        </ul>
                                     </div>
                                     <div id="tools", class="col-md-6"> <!--Column for Tools-->
                                         <h3>Tools I Use</h3>
@@ -77,7 +81,7 @@
            
         </main>
 
-        <footer>
+        <footer id="contact">
             <div class="container" id="footer">
                 <h2>Get in Touch</h2>
                 <p>If you like my work, I encourage you to reach out to me to discuss future oppurtunities! Please contact me. Call: +61 410038082. Prefer sending an email?</p>
