--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <header>
             <div class="container">
-                <img src="img/logo.png" alt="Logo" id="logo">
+                <a href="index.html"><img src="img/logo.png" alt="Logo" id="logo"></a>
                 <nav>
                     <ul>
                        <li><a href="pluto-pay.html">Work</a></li>
@@ -27,15 +27,15 @@
         </header>
         
         <main>
-            <div class="container">
-                <div id="hero">
+            <div id="hero">
+                <div class="container">
                     <h1>Hi there, My name’s Dan Ramsay.<br><span>I’m a budding UX designer based in Melbourne, Australia.</span></h1>
                     <p>I graduated from Monash University with a Bachelor of Arts Majoring in Journalism, and recently transitioned to UX design which has become my passion. 
                         I look forward  sharing my work with you, I hope it reflects the hard work and energy I’ve put into it.</p>
                 </div>
             </div>
-            <div id="work" class="container">
-                <div>
+            <div id="work">
+                <div class="container">
                     <h2 id="my-work">My Work</h2>
                     <div class="row">
                         <div class="col-md-6 col-lg-7">
@@ -44,17 +44,18 @@
                                 <img src="img/plutopay/project1.png" alt="Project 1">
                             </picture>
                         </div>
-                        <div class="col-md-6 col-lg-5">
+                        <div class="col-md-6 col-lg-7"></div>
+                        <div class="col-md-6 col-lg-5"></div>
                             <h3>Pluto-Pay</h3>
                             <p>Pluto-Pay was project I worked on for CareerFoundry during August-October 2022. It involved the full use of the user first design strategy.</p> 
                             <p>Including crafting a problem statement and hypothesis, conducting research, creating wireframes, and finally designing the final prototype. 
                                 It was created primarily using Figma.</p>
                             <a href="pluto-pay.html" class="button">Read More</a>
-                        </div>
                     </div>
                     <div>
                         <div class="row">
-                            <div class="col-md-6 col-lg-7">
+                            <div class="col-md-6 col-lg-7"></div>
+                            <div class="col-md-6 col-lg-5"></div>
                                 <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
                                     <defs>
                                         <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917"></polygon>
@@ -654,7 +655,6 @@
                                         <path fill="#1A232C" d="M55.253 470.489L55.253 410.403C55.253 409.85 54.805 409.403 54.253 409.403 53.701 409.403 53.253 409.85 53.253 410.403L53.253 470.489C53.253 471.041 53.701 471.489 54.253 471.489 54.805 471.489 55.253 471.041 55.253 470.489M50.889 340.95L65.312 340.95C65.865 340.95 66.312 340.502 66.312 339.95 66.312 339.397 65.865 338.95 65.312 338.95L50.889 338.95C50.336 338.95 49.889 339.397 49.889 339.95 49.889 340.502 50.336 340.95 50.889 340.95"></path>
                                     </g>
                                 </svg>
-                            </div>
                             <div class="col-md-6 col-lg-5">
                                 <h3> CSS Animation</h3>
                                 <p>Here's an example of CSS animation. </p>
@@ -665,7 +665,7 @@
             </div>
         </main>
         
-        <footer>
+        <footer id="contact">
             <div class="container" id="footer">
                 <h2>Get in Touch</h2>
                 <p>If you like my work, I encourage you to reach out to me to discuss future oppurtunities! Please contact me. Call: +61 410038082. Prefer sending an email?</p>
@@ -705,5 +705,7 @@
             </div>
         </footer>
 
+
+    <script src="js/script.js"></script>
     </body>
 </html>
