--- a/pluto-pay.html
+++ b/pluto-pay.html
@@ -13,7 +13,7 @@
 
     <header id="header">
         <div class="container">
-            <img src="img/logo.png" alt="Logo" id="logo">
+            <a href="index.html"><img src="img/logo.png" alt="Logo" id="logo"></a>
             <nav>
                 <ul>
                    <li><a href="pluto-pay.html">Work</a></li>
@@ -93,7 +93,7 @@
             </div>
         </main>
 
-        <footer>
+        <footer id="contact">
             <div class="container" id="footer">
                 <h2>Get in Touch</h2>
                 <p>If you like my work, I encourage you to reach out to me to discuss future oppurtunities! Please contact me. Call: +61 410038082. Prefer sending an email?</p>
