swapped class and Id

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <a href="index.html"><img src="img/logo.png" alt="Logo" id="logo"></a>
                 <nav>
                     <ul>
-                       <li><a href="pluto-pay.html">Work</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="pluto-pay.html">Work</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -27,15 +28,15 @@
         </header>
         
         <main>
-            <div id="hero">
-                <div class="container">
+            <div class="container">
+                <div id="hero">
                     <h1>Hi there, My name’s Dan Ramsay.<br><span>I’m a budding UX designer based in Melbourne, Australia.</span></h1>
                     <p>I graduated from Monash University with a Bachelor of Arts Majoring in Journalism, and recently transitioned to UX design which has become my passion. 
                         I look forward  sharing my work with you, I hope it reflects the hard work and energy I’ve put into it.</p>
                 </div>
             </div>
-            <div id="work">
-                <div class="container">
+            <div class="container">
+                <div id="work">
                     <h2 id="my-work">My Work</h2>
                     <div class="row">
                         <div class="col-md-6 col-lg-7">
