--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
                 <a href="index.html"><img src="img/logo.png" alt="Logo" id="logo"></a>
                 <nav>
                     <ul>
-                       <li><a href="pluto-pay.html">Work</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="pluto-pay.html">Work</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
